--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'application'
     id 'checkstyle'
+    id 'com.gradleup.shadow' version '9.1.0'
 }
 
 repositories {
@@ -55,6 +56,10 @@ jar {
         )
     }
     // duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
+
+shadowJar{
+    archiveFileName = 'bruh.jar'
 }
 
 checkstyle {
